# qtlformer

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.nf  manifest.parquet  nextflow.config
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: branch.yml  build-image.yaml  ci.yml  fix-linting.yml
conf/: base.config  google-cloud.config  local.config  test.config
modules/: build-manifest.nf
tools/: manifest.json  pyproject.toml
tools/src/qtlformer/: __init__.py
