[project]
name = "qtlformer"
version = "0.1.0"
description = "Tools to transform eQTL Catalogue credible sets to gentropy StudyLocus and StudyIndex"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gcsfs>=2025.10.0",
    "google-cloud-storage>=3.6.0",
    "pandas[parquet]>=2.3.3",
    "typer>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
qtlformer = "qtlformer:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/qtlformer"]
